cabal-version:      2.4
name:               Elements
version:            0.1.0.0
synopsis:           Chemistry DSL In Haskell 

-- A longer description of the package.
-- description:
homepage:           reep236.github.io/Elements

-- A URL where users can report bugs.
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Benjamin Swartley
maintainer:         reep236@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
    exposed-modules:    Elements
                      , ElectronConf 
                      , Slaters 
                      , Slaters.Safe 
                      , Slaters.Unsafe 
                      , Compounds
                      , Bonds
                      , Reactions 
                      , Orbitals 

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:   base ^>=4.16.3.0
                   , vector

    -- Directories containing source files.
    hs-source-dirs: app
    default-language: Haskell2010

executable Example
    main-is:          Example.hs    

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.3.0
                    , Elements
                    , vector

    -- Directories containing source files.
    hs-source-dirs: app
    default-language: Haskell2010

--test-suite Elements-test
--    default-language: Haskell2010
--    type:             exitcode-stdio-1.0
--    hs-source-dirs:   test
--    main-is:          MyLibTest.hs
--    build-depends:    base ^>=4.16.3.0
